@@ -22,6 +22,21 @@
                     <h1 class="page-title-h1">{{page.title}}</h1>
 
 				{{content}}
+				
+				{% for post in site.posts %}
+				<article class="post post-index">
+					<header class="post-header">
+						<h2 class="post-title"><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
+					</header>
+					<section class="post-excerpt">
+						<p>{{ post.content | strip_html | truncatewords: 26 }} <a class="read-more" href="{{ post.url | relative_url }}" >&raquo;</a></p>
+					</section>
+					<div class="post-meta">
+						<time class="post-date" datetime="{{ post.date | date:'%Y-%m-%d' }}">{{ post.date | date_to_string }}</time>
+					</footer>
+				</article>
+				{% endfor %}
+				
             </div>
         </div><!--/.container-->
 
@@ -29,7 +44,6 @@
     </div><!--/.page-container-->
     {% include footer.html %}
 
-    {% include google_analytics.html %}
 
 </body>
 
