@@ -327,7 +327,7 @@ Navbars
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #ee7600;
+  color: #0a7cc9;
 }
 
 .navbar-default .navbar-text {
@@ -340,7 +340,7 @@ Navbars
 
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #ee7600;
+  color: #0a7cc9;
 }
 
 .navbar-default .navbar-nav > li > .dropdown-menu {
@@ -353,7 +353,7 @@ Navbars
 
 .navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
 .navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
-  color: #ee7600;
+  color: #0a7cc9;
   background-color: #ffffff;
 }
 
@@ -364,21 +364,21 @@ Navbars
 .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
 .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
 .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-  color: #ee7600;
+  color: #0a7cc9;
   background-color: #ffffff;
 }
 
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #ee7600;
+  color: #0a7cc9;
   background-color: #ffffff;
 }
 
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-  color: #ee7600;
+  color: #0a7cc9;
   background-color: #ffffff;
 }
 
@@ -405,7 +405,7 @@ Navbars
 }
 
 .navbar-default .navbar-link:hover {
-  color: #ee7600;
+  color: #0a7cc9;
 }
 
 #search-demo-container ul#results-container {
