@@ -358,7 +358,7 @@
 
 	.navbar-default .navbar-brand:hover,
 	.navbar-default .navbar-brand:focus {
-	  color: #2e2d9b;
+	  color: #337ab7;
 	}
 
 	.navbar-default .navbar-text {
@@ -395,14 +395,14 @@
 	.navbar-default .navbar-nav .open .dropdown-menu > .active > a,
 	.navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
 	.navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-	  color: #2e2d9b;
+	  color: #337ab7;
 	  background-color: #000;
 	}
 
 	.navbar-default .navbar-nav > .active > a,
 	.navbar-default .navbar-nav > .active > a:hover,
 	.navbar-default .navbar-nav > .active > a:focus {
-	  color: #2e2d9b;
+	  color: #337ab7;
 	  background-color: #000;
 	}
 
@@ -436,7 +436,7 @@
 	}
 
 	.navbar-default .navbar-link:hover {
-	  color: #2e2d9b;
+	  color: #337ab7;
 	}
 
 	#search-demo-container ul#results-container {
