@@ -5,3 +5,5 @@
 - Minor modifications to styling of footer and sidebar to enable new functionality, such as displaying a sidebar with no collapsable navigation.
 - Added photo to sidebar.
 - Added the following sidebars: home
+- Added tag generation.
+- Added posts list.
